--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
+# Ignore files of Eclipse
+*.project
+*.metadata
 
+# Ignore files of instructions
 *.class
+*.swp
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
-*.class
-*.swp
-*.project
-*.metadata
-*.classpath
+*.jar
+*.war
+*.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
